# katago-onnx

./: .gitignore  AGENTS.md  HF_MODEL_CARD.md  LICENSE  README.md  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
notebooks/: 01_Download_Model.ipynb  02_Convert_to_ONNX.ipynb  03_Analyze_Pytorch.ipynb  04_Inference.ipynb  04_Script_ONNX.ipynb  dev.ipynb
scripts/: update_katago.py
sgf/: game-13-white-12.sgf  game-13-white-8.sgf  game-19-black-1.sgf  game-19-black-18.sgf  game-19-black-54.sgf  game-19-white-38.sgf  game-19-white-46.sgf  game-9-white-19.sgf
src/katago/: VENDOR_INFO.txt
src/katago/game/: board.py  data.py  features.py  gamestate.py  sgfmetadata.py
src/katago/train/: data_processing_pytorch.py  load_model.py  metrics_logging.py  metrics_pytorch.py  model_pytorch.py  modelconfigs.py
src/katago/utils/: elo.py  push_back_generator.py
src/katago_onnx/: cli.py  convert.py  download.py  export.py  upload.py  utils.py
src/katago_onnx.egg-info/: PKG-INFO  SOURCES.txt
www/: README.md  index.html  script.js
